# similarity-bl

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  debug_energy_terms.py  mkdocs.yml  pyproject.toml  test_S_effect_nonzpg.py  test_v_computation.py  test_v_flat_plate.py
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: compressible_boundary_layer_equations.md  falkner_skan_boundary_layer.md  index.md  installation.md  nomenclature.md  refs.bib
docs/compressible_boundary_layer_equations/: 2d_equations.md  index.md  quasi_3d_equations.md
docs/falkner_skan/: derivation.md  derivation_is.md  index.md  reduction_of_order.md
docs/falkner_skan_cooke/: derivation_is.md  index.md  reduction_of_order.md
docs/javascripts/: mathjax.js
docs/theory/: index.md
docs/theory/boundary_layer_equations/: 2d_equations.md  3d_equations.md  axisymmetric_equations.md  index.md  mangler.md  quasi_3d_equations.md
docs/theory/falkner_skan/: derivation.md  derivation_is.md  index.md  reduction_of_order.md
docs/theory/falkner_skan_cooke/: derivation.md  derivation_is.md  index.md  reduction_of_order.md
docs/theory/similarity_to_physical_coordinate_transform/: illingworth_stewartson.md  index.md  levy_lees.md
docs/user_guide/: matlab_usage.md
docs/vnv/: index.md
docs/vnv/validation/: index.md
docs/vnv/verification/: index.md
docs/workflow/: define_solver_inputs.md  define_solver_options.md  index.md  map_to_physical_space.md  run_solver.md  use_or_export_profiles.md
src/simbl/: __init__.py  cli.py
src/simbl/cli/: __init__.py  app.py  eta2y.py  examples.py  init.py  solve.py
src/simbl/config/: __init__.py  config_ops.py  schema.py  template.py
src/simbl/data/: lookup_fs_adiabatic.json  lookup_fs_adiabatic_failed.json  lookup_fs_isothermal.json  lookup_fsc_adiabatic.json  lookup_fsc_isothermal.json
src/simbl/examples/: blasius.toml  flat_plate_mach5_adiabatic.toml  flat_plate_mach5_isothermal.toml  swept_plate_mach6.toml  wedge_mach3.toml
src/simbl/io/: __init__.py  examples.py  json_writer.py  toml_writer.py  (+2 more)
tests/: test_eta2y.py  test_falkner_skan_cooke_liu2021.py
vnv/: README.md
(+48 files in other folders)
